--- a/src/style/Ubicacion.css
+++ b/src/style/Ubicacion.css
@@ -1,31 +1,35 @@
+/* #region CONTENEDOR */
 .fondo-seccion {
     @apply h-full w-full relative flex justify-center items-center font-[Montserrat] scroll-smooth
 }
 
 .titulo-texto {
-    @apply font-bold text-[36px] md:text-[42px] text-[#0b4ba2] text-center absolute top-10
+    @apply font-bold text-[36px] text-[var(--primary-blue)] text-center absolute top-5
 }
 
 .contenedor {
-    @apply w-full h-[600px] rounded-[28px] justify-center items-center mt-5 relative max-w-5xl flex
+    @apply w-full h-[350px] rounded-[28px] justify-center items-center max-w-5xl flex
 }
 
 .fondo-ubicacion {
-    @apply absolute top-0 left-0 object-cover z-0;
+    @apply absolute top-20 left-0 object-cover z-0;
 }
 
 .contenedor-carrusel {
-    @apply relative flex flex-col justify-center w-full h-full left-1/2 -translate-x-1/2 items-center z-50 mt-20;
+    @apply relative flex flex-col justify-center w-full max-h-[700px] left-1/2 -translate-x-1/2 items-center z-50 mt-16;
 }
 
 .carrusel-desktop {
-    @apply relative w-full max-w-[90%] mx-[10%] p-10 hidden lg:block mb-10
+    @apply relative w-full hidden
 }
 
 .carrusel-movil {
-    @apply relative max-h-[600px] w-full lg:hidden block overflow-hidden z-50
+    @apply relative h-[80%] w-full block z-50
 }
 
+/* #endregion */
+
+/* #region ESTADOS */
 .estado-resaltado {
     @apply transition-opacity duration-300 ease-in-out will-change-transform scale-100 opacity-0;
 }
@@ -34,72 +38,224 @@
     @apply scale-100 opacity-100 duration-100;
 }
 
-
 .img-nl {
-    @apply absolute top-[150px] xl:left-[330px] z-40 max-w-[200px] hidden lg:block;
+    @apply absolute top-[150px] z-40 max-w-[200px] hidden;
 }
 
 .img-laredo {
-    @apply absolute top-[165px] xl:left-[370px] z-40 max-w-[180px] hidden lg:block;
+    @apply absolute top-[165px] z-40 max-w-[180px] hidden;
 }
 
 .img-cdmx {
-    @apply absolute top-[300px] xl:left-[270px] z-40 max-w-[140px] scale-100 hidden lg:block;
+    @apply absolute top-[300px] z-40 max-w-[140px] scale-100 hidden;
     ;
 }
 
 .img-texas {
-    @apply absolute top-[270px] xl:left-[90px] z-40 max-w-[300px] hidden lg:block;
+    @apply absolute top-[270px] z-40 max-w-[300px] hidden;
 }
 
 .img-ny {
-    @apply absolute top-[110px] xl:left-[490px] z-40 max-w-[180px] hidden lg:block;
+    @apply absolute top-[110px] z-40 max-w-[180px] hidden;
 }
 
 .img-catharines {
-    @apply absolute top-[280px] xl:left-[180px] z-40 max-w-[290px] hidden lg:block;
+    @apply absolute top-[280px] z-40 max-w-[290px] hidden;
 }
 
-@media (min-width: 900px) and (max-width: 1420px) {
-    .img-nl {
-        @apply left-[260px];
+/* #endregion */
+
+@media (min-width: 500px) {
+
+    /* #region CONTENEDOR */
+    .fondo-seccion {
+        @apply h-full w-full relative flex justify-center items-center font-[Montserrat] scroll-smooth
     }
 
-    .img-laredo {
-        @apply top-[160px] left-[300px] max-w-[200px];
+    .titulo-texto {
+        @apply font-bold text-[42px] text-center absolute top-10
     }
 
-    .img-cdmx {
-        @apply left-[200px];
-
+    .contenedor {
+        @apply w-full h-[400px] rounded-[28px] justify-center items-center mt-16 max-w-5xl flex mb-10
     }
 
-    .img-texas {
-        @apply top-[270px] left-[50px];
-    }
-
-    .img-ny {
-        @apply top-[110px] left-[390px];
-    }
-
-    .img-catharines {
-        @apply top-[280px] left-[120px];
-    }
-
-    .carrusel-desktop {
-        @apply max-w-[70%]
+    .fondo-ubicacion {
+        @apply absolute top-28 left-0 object-cover z-0;
     }
 
     .contenedor-carrusel {
-        @apply mt-0;
+        @apply relative flex flex-col justify-center w-full h-full left-1/2 -translate-x-1/2 items-center z-50 mt-0;
+    }
+
+    .carrusel-desktop {
+        @apply relative w-full max-w-[80%] mx-[10%] p-10 block mb-5
+    }
+
+    .carrusel-movil {
+        @apply relative max-h-[600px] w-full hidden overflow-hidden z-50
+    }
+
+    /* #endregion */
+
+ 
+
+}
+@media (min-width: 700px) {
+       .contenedor {
+        @apply w-full h-[650px] rounded-[28px] justify-center items-center mt-0 max-w-5xl flex
     }
 }
+@media (min-width: 1024px) {
 
-@media (max-width: 900px){
-    .contenedor-carrusel{
-        @apply -translate-y-[30%]
+    /* #region CONTENEDOR */
+    .fondo-seccion {
+        @apply h-full w-full relative flex justify-center items-center font-[Montserrat] scroll-smooth
     }
-    .contenedor{
-        @apply  translate-y-[20%]
+
+    .titulo-texto {
+        @apply font-bold text-[42px] text-center absolute top-5
     }
+
+    .contenedor {
+        @apply w-full h-[600px] rounded-[28px] justify-center items-center mt-5 relative max-w-5xl flex
+    }
+
+    .fondo-ubicacion {
+        @apply absolute top-0 left-0 object-cover z-0;
+    }
+
+    .contenedor-carrusel {
+        @apply relative flex flex-col justify-center w-full h-full left-1/2 -translate-x-1/2 items-center z-50 mt-10;
+    }
+
+    .carrusel-desktop {
+        @apply relative w-full max-w-[90%] mx-[10%] p-10 block mb-10
+    }
+
+    .carrusel-movil {
+        @apply hidden
+    }
+
+    /* #endregion */
+
+    /* #region ESTADOS */
+    .estado-resaltado {
+        @apply transition-opacity duration-300 ease-in-out will-change-transform scale-100 opacity-0;
+    }
+
+    .estado-resaltado:hover {
+        @apply scale-100 opacity-100 duration-100;
+    }
+
+    .img-nl {
+        @apply absolute top-[150px] left-[310px] z-40 max-w-[200px] block;
+    }
+
+    .img-laredo {
+        @apply absolute top-[158px] left-[340px] z-40 max-w-[220px] block;
+    }
+
+    .img-cdmx {
+        @apply absolute top-[310px] left-[250px] z-40 max-w-[140px] scale-100 block;
+        ;
+    }
+
+    .img-texas {
+        @apply absolute top-[250px] left-[50px] z-40 max-w-[330px] block;
+    }
+
+    .img-ny {
+        @apply absolute top-[100px] left-[450px] z-40 max-w-[180px] block;
+    }
+
+    .img-catharines {
+        @apply absolute top-[280px] left-[160px] z-40 max-w-[290px] block;
+    }
+
+    /* #endregion */
+
+}
+
+@media (min-width: 1300px) {
+
+    /* #region ESTADOS */
+    .estado-resaltado {
+        @apply transition-opacity duration-300 ease-in-out will-change-transform scale-100 opacity-0 translate-x-5;
+    }
+
+    /* #endregion */
+
+}
+
+
+@media (min-width: 2000px) {
+
+    /* #region CONTENEDOR */
+    .fondo-seccion {
+        @apply h-full w-full relative flex justify-center items-center font-[Montserrat] scroll-smooth
+    }
+
+    .titulo-texto {
+        @apply font-bold text-[42px] text-[#0b4ba2] text-center absolute top-10
+    }
+
+    .contenedor {
+        @apply w-full h-[600px] rounded-[28px] justify-center items-center mt-5 relative max-w-5xl flex
+    }
+
+    .fondo-ubicacion {
+        @apply absolute top-0 left-0 object-cover z-0;
+    }
+
+    .contenedor-carrusel {
+        @apply relative flex flex-col justify-center w-full h-full left-1/2 -translate-x-1/2 items-center z-50 mt-12;
+    }
+
+    .carrusel-desktop {
+        @apply relative w-full max-w-[90%] mx-[10%] p-10 block mb-10
+    }
+
+    .carrusel-movil {
+        @apply relative max-h-[600px] w-full hidden overflow-hidden z-50
+    }
+
+    /* #endregion */
+
+    /* #region ESTADOS */
+    .estado-resaltado {
+        @apply transition-opacity duration-300 ease-in-out will-change-transform scale-100 opacity-0 translate-x-0;
+    }
+
+    .estado-resaltado:hover {
+        @apply scale-100 opacity-100 duration-100;
+    }
+
+    .img-nl {
+        @apply absolute top-[150px] left-[330px] z-40 max-w-[200px] block;
+    }
+
+    .img-laredo {
+        @apply absolute top-[165px] left-[370px] z-40 max-w-[180px] block;
+    }
+
+    .img-cdmx {
+        @apply absolute top-[300px] left-[270px] z-40 max-w-[140px] scale-100 block;
+        ;
+    }
+
+    .img-texas {
+        @apply absolute top-[270px] left-[90px] z-40 max-w-[300px] block;
+    }
+
+    .img-ny {
+        @apply absolute top-[110px] left-[490px] z-40 max-w-[180px] block;
+    }
+
+    .img-catharines {
+        @apply absolute top-[280px] left-[180px] z-40 max-w-[290px] block;
+    }
+
+    /* #endregion */
+
 }
